[package]
name = "loadtest"
version = "0.1.0"
edition = "2024"
description = "HTTP load testing tool"
license = "Apache-2.0"
repository = "https://github.com/bonnetn/loadtest"
readme = "README.md"
keywords = ["load-test", "http", "benchmark"]
categories = ["development-tools::testing"]

[build-dependencies]
prost-build = "0.14"

[dependencies]
clap = { version = "4", features = ["derive"] }
prost = "0.14"
http = "1"
url = "2"
miette = { version = "7", features = ["fancy", "derive"] }
thiserror = "2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["http2", "default-tls", "stream", "rustls"] }
rust_decimal = "1"
chrono = "0.4"
bytes = "1.11.1"
console = "0.16.2"
rustls-native-certs = "0.8.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
